--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bordro Hesaplama</title>
+<title>numan özdemir katkılarıyla</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -104,4 +105,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
