--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bordro Hesaplama</title>
-<title>numan özdemir katkılarıyla</title>
+<title>Numan ÖZDEMİR'in katkılarıyla</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -107,5 +107,6 @@
 </body>
 
 </html>
+
 
 
