--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <p class="credit">Numan Özdemir'in katkılarıyla</p>
-    <h1>Maaş Hesaplama</h1>
+    <h1>Maaş Hesaplama (2025)</h1>
 
     <main>
         <div class="controls">
@@ -102,4 +102,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
