--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <p class="credit">Numan Özdemir'in katkılarıyla</p>
-    <h1>Maaş Hesaplama (2025)</h1>
+    <h1>Maaş Hesaplama</h1>
 
     <main>
         <div class="controls">
@@ -98,9 +98,9 @@
                 <p id="net-maas">0</p>
             </div>
         </div>
+        <a href="https://bordro2025.netlify.app/sosyal.html" class="social-button">Sosyal Yardımlar</a>
     </main>
 
     <script src="script.js"></script>
 </body>
-
 </html>
