--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
                 <p id="net-maas">0</p>
             </div>
         </div>
-        <a href="https://bordro2025.netlify.app/sosyal.html" class="social-button">Sosyal Yardımlar</a>
+        
+        <div class="button-container">
+            <a href="https://bordro2025.netlify.app/sosyal.html" class="social-button">Sosyal Yardımlar</a>
+            <a href="https://bordro2025.netlify.app/sozlesme.html" class="social-button">Sözleşme Kitapçığı</a>
+        </div>
     </main>
 
     <script src="script.js"></script>
