--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <input type="number" id="yol-ucreti" value="0">
             </div>
             <div class="input-group">
-                <label for="bes-kesintisi">BES Kesintisi (%):</label>
+                <label for="bes-kesintisi">BES Kesintisi (Net):</label>
                 <input type="number" id="bes-kesintisi" value="0">
             </div>
             <div class="input-group">
@@ -97,7 +97,7 @@
                 <p id="ikramiye">0</p>
             </div>
              <div class="result-box">
-                <p>BES Kesintisi:</p>
+                <p>BES Kesintisi (Brüt):</p>
                 <p id="bes-kesintisi-sonuc">0</p>
             </div>
              <div class="result-box">
