--- a/index.html
+++ b/index.html
@@ -3,29 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maaş Bordrosu Hesaplama</title>
+    <title>Maaş Hesaplama</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div class="container">
-        <h2>Maaş Bordrosu Hesaplama</h2>
-        <form id="maas-form">
-            <label for="brut-maas">Brüt Maaş:</label>
-            <input type="number" id="brut-maas" required>
+    <h1>Maaş Hesaplama</h1>
 
-            <label for="bes-yuzdesi">BES Kesintisi Net (%):</label>
-            <input type="number" id="bes-yuzdesi" required>
-
-            <label for="vakif-tutari">Vakıf Kesintisi:</label>
-            <input type="number" id="vakif-tutari" required>
-
-            <button type="submit">Hesapla</button>
-        </form>
-
-        <div id="sonuc" class="sonuc-kutusu">
+    <main>
+        <div class="controls">
+            <div class="input-group">
+                <label for="month">Ay:</label>
+                <select id="month">
+                    <option value="1">Ocak</option>
+                    <option value="2">Şubat</option>
+                    <option value="3">Mart</option>
+                    <option value="4">Nisan</option>
+                    <option value="5">Mayıs</option>
+                    <option value="6">Haziran</option>
+                    <option value="7">Temmuz</option>
+                    <option value="8">Ağustos</option>
+                    <option value="9">Eylül</option>
+                    <option value="10">Ekim</option>
+                    <option value="11">Kasım</option>
+                    <option value="12">Aralık</option>
+                </select>
             </div>
-    </div>
+            <div class="input-group">
+                <label for="tax-rate">Vergi Dilimi:</label>
+                <select id="tax-rate">
+                    <option value="0.15">15%</option>
+                    <option value="0.20">20%</option>
+                    <option value="0.27">27%</option>
+                    <option value="0.35">35%</option>
+                </select>
+            </div>
+        </div>
+        
+        <div class="input-section">
+            <div class="input-group">
+                <label for="saat-ucreti">Çalışma saat ücreti:</label>
+                <input type="number" id="saat-ucreti" value="0">
+            </div>
+            <div class="input-group">
+                <label for="calisma-gun-saati">Çalışma gün saati:</label>
+                <input type="number" id="calisma-gun-saati" value="0">
+            </div>
+            <div class="input-group">
+                <label for="fazla-mesai-saati">Fazla mesai saati:</label>
+                <input type="number" id="fazla-mesai-saati" value="0">
+            </div>
+            <div class="input-group">
+                <label for="gece-zammi">Gece zammı:</label>
+                <input type="number" id="gece-zammi" value="0">
+            </div>
+            <div class="input-group">
+                <label for="ulusal-bayram">Ulusal bayram çalışması:</label>
+                <input type="number" id="ulusal-bayram" value="0">
+            </div>
+            <div class="input-group">
+                <label for="dini-bayram">Dini bayram çalışması:</label>
+                <input type="number" id="dini-bayram" value="0">
+            </div>
+            <div class="input-group">
+                <label for="resmi-tatil">Resmi tatil fazla mesai:</label>
+                <input type="number" id="resmi-tatil" value="0">
+            </div>
+            <div class="input-group">
+                <label for="yol-ucreti">Yol ücreti (brüt):</label>
+                <input type="number" id="yol-ucreti" value="0">
+            </div>
+            <div class="input-group">
+                <label for="bes-kesintisi">BES Kesintisi (Net):</label>
+                <input type="number" id="bes-kesintisi" value="0">
+            </div>
+            <div class="input-group">
+                <label for="vakif-kesintisi">Vakıf Kesintisi (%):</label>
+                <input type="number" id="vakif-kesintisi" value="0">
+            </div>
+        </div>
+
+        <div class="results-section">
+            <div class="result-box">
+                <p>Sendika Ücreti:</p>
+                <p id="sendika-ucreti">0</p>
+            </div>
+            <div class="result-box">
+                <p>Vergi İstisnası:</p>
+                <p id="vergi-istisnasi">0</p>
+            </div>
+            <div class="result-box">
+                <p>İkramiye:</p>
+                <p id="ikramiye">0</p>
+            </div>
+             <div class="result-box">
+                <p>BES Kesintisi (Brüt):</p>
+                <p id="bes-kesintisi-sonuc">0</p>
+            </div>
+             <div class="result-box">
+                <p>Vakıf Kesintisi:</p>
+                <p id="vakif-kesintisi-sonuc">0</p>
+            </div>
+            <div class="result-box net-maas-box">
+                <p>Net Maaş:</p>
+                <p id="net-maas">0</p>
+            </div>
+        </div>
+        
+        <div class="button-container">
+            <a href="https://bordro2025.netlify.app/sosyal.html" class="social-button">Sosyal Yardımlar</a>
+        </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
