--- a/sosyal.html
+++ b/sosyal.html
@@ -90,7 +90,7 @@
 
     <div class="container">
         <div class="button-container">
-            <a href="https://bordro2025.netlify.app/" class="return-button">Hesaplama Sayfasına Dön</a>
+            <a href="https://https://bordro.pages.dev/" class="return-button">Hesaplama Sayfasına Dön</a>
         </div>
         
         <div class="table-container">
@@ -168,4 +168,5 @@
         </div>
     </div>
 </body>
+
 </html>
