--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
         </div>
         
         <div class="button-container">
-            <a href="https://bordro2025.netlify.app/sosyal.html" class="social-button">Sosyal Yardımlar</a>
+            <a href="https://bordro.pages.dev/sosyal.html" class="social-button">Sosyal Yardımlar</a>
         </div>
     </main>
 
     <script src="script.js"></script>
 </body>
 </html>
+
