--- a/sosyal.html
+++ b/sosyal.html
@@ -90,7 +90,7 @@
 
     <div class="container">
         <div class="button-container">
-            <a href="https://https://bordro.pages.dev/" class="return-button">Hesaplama Sayfasına Dön</a>
+            <a href="https://bordro.pages.dev/" class="return-button">Hesaplama Sayfasına Dön</a>
         </div>
         
         <div class="table-container">
@@ -170,3 +170,4 @@
 </body>
 
 </html>
+
