--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         </div>
         
         <div class="button-container">
+            <a href="https://bordro.pages.dev/tes.html" class="social-button">Görüş, öneri ve teşekkür</a>
             <a href="https://bordro.pages.dev/sosyal.html" class="social-button">Sosyal Yardımlar</a>
         </div>
     </main>
@@ -118,4 +119,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
