--- a/tes.html
+++ b/tes.html
@@ -22,6 +22,10 @@
             </div>
             <button type="submit" class="social-button">Gönder</button>
         </form>
+
+        <div class="button-container">
+            <a href="index.html" class="social-button">Hesaplama Sayfasına Dön</a>
+        </div>
     </main>
 
 </body>
