--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                 <input type="number" id="yol-ucreti" value="0">
             </div>
             <div class="input-group">
+                <label for="ikramiye-brut">İkramiye (Brüt):</label>
+                <input type="number" id="ikramiye-brut" value="0">
+            </div>
+            <div class="input-group">
                 <label for="bes-kesintisi">BES Kesintisi (Net):</label>
                 <input type="number" id="bes-kesintisi" value="0">
             </div>
@@ -93,8 +97,8 @@
                 <p id="vergi-istisnasi">0</p>
             </div>
             <div class="result-box">
-                <p>İkramiye:</p>
-                <p id="ikramiye">0</p>
+                <p>Toplam Brüt:</p>
+                <p id="toplam-brut">0</p>
             </div>
              <div class="result-box">
                 <p>BES Kesintisi (Brüt):</p>
