--- a/index.html
+++ b/index.html
@@ -74,16 +74,8 @@
                 <input type="number" id="yol-ucreti" value="0">
             </div>
             <div class="input-group">
-                <label for="ikramiye-brut">İkramiye (Brüt):</label>
-                <input type="number" id="ikramiye-brut" value="0">
-            </div>
-            <div class="input-group">
                 <label for="bes-kesintisi">BES Kesintisi (Net):</label>
                 <input type="number" id="bes-kesintisi" value="0">
-            </div>
-            <div class="input-group">
-                <label for="vakif-kesintisi">Vakıf Kesintisi (%):</label>
-                <input type="number" id="vakif-kesintisi" value="0">
             </div>
         </div>
 
@@ -107,6 +99,10 @@
              <div class="result-box">
                 <p>Vakıf Kesintisi:</p>
                 <p id="vakif-kesintisi-sonuc">0</p>
+            </div>
+             <div class="result-box">
+                <p>Net İkramiye Tutarı:</p>
+                <p id="net-ikramiye">0</p>
             </div>
             <div class="result-box net-maas-box">
                 <p>Net Maaş:</p>
