--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
                 <label for="bes-kesintisi">BES Kesintisi (Net):</label>
                 <input type="number" id="bes-kesintisi" value="0">
             </div>
+            <div class="input-group">
+                <label for="vakif-kesintisi-yuzde">Vakıf Kesintisi (%):</label>
+                <input type="number" id="vakif-kesintisi-yuzde" value="0">
+            </div>
         </div>
 
         <div class="results-section">
