--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                 <input type="number" id="resmi-tatil" value="0">
             </div>
             <div class="input-group">
+                <label for="ikramiye-brut">İkramiye (Brüt):</label>
+                <input type="number" id="ikramiye-brut" value="0">
+            </div>
+            <div class="input-group">
                 <label for="yol-ucreti">Yol ücreti (brüt):</label>
                 <input type="number" id="yol-ucreti" value="0">
             </div>
