--- a/index.html
+++ b/index.html
@@ -3,28 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Net Maaş Hesaplayıcı</title>
+    <title>Maaş Hesaplama</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        .container { max-width: 600px; margin: auto; border: 1px solid #ccc; padding: 20px; border-radius: 8px; }
-        .input-group { margin-bottom: 15px; }
-        .input-group label { display: block; margin-bottom: 5px; font-weight: bold; }
-        .input-group input, .input-group select { width: 100%; padding: 8px; box-sizing: border-box; }
-        .result-group { margin-top: 20px; border-top: 2px solid #333; padding-top: 10px; }
-        .result-row { display: flex; justify-content: space-between; padding: 5px 0; }
-        .result-label { font-weight: bold; }
-        .result-value { text-align: right; }
-        h2 { text-align: center; }
-        h3 { margin-top: 20px; }
+        body { font-family: Arial, sans-serif; display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: #f0f2f5; margin: 0; padding: 20px; box-sizing: border-box; }
+        .container { background-color: #ffffff; padding: 25px 35px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); width: 100%; max-width: 600px; }
+        h2 { text-align: center; color: #333; margin-bottom: 25px; }
+        .top-options { display: flex; justify-content: space-between; margin-bottom: 20px; }
+        .top-options select { width: 48%; padding: 10px; border: 1px solid #ddd; border-radius: 8px; font-size: 16px; }
+        .input-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 20px; }
+        .input-group { display: flex; flex-direction: column; }
+        .input-group label { margin-bottom: 8px; font-weight: 600; color: #555; font-size: 14px; }
+        .input-group input { padding: 10px; border: 1px solid #ccc; border-radius: 8px; font-size: 16px; background-color: #f9f9f9; }
+        .output-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-top: 20px; border-top: 2px solid #eee; padding-top: 20px; }
+        .output-group { text-align: center; }
+        .output-label { font-size: 14px; color: #777; margin-bottom: 5px; }
+        .output-value { font-size: 18px; font-weight: bold; color: #333; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+        .net-maas-box { background-color: #6a1b9a; color: #fff; padding: 20px; border-radius: 12px; text-align: center; margin-top: 25px; }
+        .net-maas-label { font-size: 18px; font-weight: 600; margin-bottom: 5px; }
+        .net-maas-value { font-size: 30px; font-weight: bold; }
+        .bottom-buttons { display: flex; justify-content: space-around; margin-top: 20px; }
+        .bottom-buttons button { padding: 12px 20px; border: none; border-radius: 8px; cursor: pointer; font-size: 14px; font-weight: 600; background-color: #e0e0e0; color: #555; transition: background-color 0.3s; }
+        .bottom-buttons button:hover { background-color: #d0d0d0; }
+        @media (max-width: 480px) {
+            .input-grid, .output-grid { grid-template-columns: 1fr; }
+            .top-options { flex-direction: column; gap: 10px; }
+            .top-options select { width: 100%; }
+            .bottom-buttons { flex-direction: column; gap: 10px; }
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Net Maaş Hesaplayıcı</h2>
-        <p>Lütfen bordronuzdaki değerleri giriniz:</p>
+        <h2>Maaş Hesaplama</h2>
 
-        <div class="input-group">
-            <label for="month">Ay</label>
+        <div class="top-options">
             <select id="month">
                 <option value="1">Ocak</option>
                 <option value="2">Şubat</option>
@@ -39,73 +51,97 @@
                 <option value="11">Kasım</option>
                 <option value="12">Aralık</option>
             </select>
-        </div>
-        <div class="input-group">
-            <label for="saat-ucreti">Saatlik Ücret</label>
-            <input type="number" id="saat-ucreti" value="318.13">
-        </div>
-        <div class="input-group">
-            <label for="calisma-gun-saati">Çalışma Gün Saati</label>
-            <input type="number" id="calisma-gun-saati" value="232.5">
-        </div>
-        <div class="input-group">
-            <label for="fazla-mesai-saati">Fazla Mesai Saati</label>
-            <input type="number" id="fazla-mesai-saati" value="4">
-        </div>
-        <div class="input-group">
-            <label for="gece-zammi">Gece Zammı (Saat)</label>
-            <input type="number" id="gece-zammi" value="78">
-        </div>
-        <div class="input-group">
-            <label for="ulusal-bayram">Ulusal Bayram Çalışması (Saat)</label>
-            <input type="number" id="ulusal-bayram" value="7.5">
-        </div>
-        <div class="input-group">
-            <label for="dini-bayram">Dini Bayram Çalışması (Saat)</label>
-            <input type="number" id="dini-bayram" value="0">
-        </div>
-        <div class="input-group">
-            <label for="resmi-tatil">Resmi Tatil (Saat)</label>
-            <input type="number" id="resmi-tatil" value="0">
-        </div>
-        <div class="input-group">
-            <label for="yol-ucreti">Yol Ücreti</label>
-            <input type="number" id="yol-ucreti" value="0">
-        </div>
-        <div class="input-group">
-            <label for="bes-kesintisi">Net BES Kesintisi</label>
-            <input type="number" id="bes-kesintisi" value="2520.75">
-        </div>
-        <div class="input-group">
-            <label for="vakif-kesintisi-yuzde">Vakıf Kesintisi Yüzdesi</label>
-            <input type="number" id="vakif-kesintisi-yuzde" value="10">
-        </div>
-        <div class="input-group">
-            <label for="tax-rate">Gelir Vergisi Oranı (%)</label>
             <select id="tax-rate">
-                <option value="0.15">15%</option>
-                <option value="0.20">20%</option>
-                <option value="0.27">27%</option>
-                <option value="0.35">35%</option>
-                <option value="0.40">40%</option>
+                <option value="0.15">Vergi Dilimi: 15%</option>
+                <option value="0.20">Vergi Dilimi: 20%</option>
+                <option value="0.27">Vergi Dilimi: 27%</option>
+                <option value="0.35">Vergi Dilimi: 35%</option>
+                <option value="0.40">Vergi Dilimi: 40%</option>
             </select>
         </div>
+        
+        <div class="input-grid">
+            <div class="input-group">
+                <label for="saat-ucreti">Çalışma saat ücreti:</label>
+                <input type="number" id="saat-ucreti" value="318.13">
+            </div>
+            <div class="input-group">
+                <label for="calisma-gun-saati">Çalışma gün saati:</label>
+                <input type="number" id="calisma-gun-saati" value="232.5">
+            </div>
+            <div class="input-group">
+                <label for="fazla-mesai-saati">Fazla mesai saati:</label>
+                <input type="number" id="fazla-mesai-saati" value="4">
+            </div>
+            <div class="input-group">
+                <label for="gece-zammi">Gece zammı:</label>
+                <input type="number" id="gece-zammi" value="78">
+            </div>
+            <div class="input-group">
+                <label for="ulusal-bayram">Ulusal bayram çalışması:</label>
+                <input type="number" id="ulusal-bayram" value="7.5">
+            </div>
+            <div class="input-group">
+                <label for="dini-bayram">Dini bayram çalışması:</label>
+                <input type="number" id="dini-bayram" value="0">
+            </div>
+            <div class="input-group">
+                <label for="resmi-tatil">Resmi tatil fazla mesai:</label>
+                <input type="number" id="resmi-tatil" value="0">
+            </div>
+            <div class="input-group">
+                <label for="ikramiye-brut">İkramiye (Brüt):</label>
+                <input type="number" id="ikramiye-brut" value="0">
+            </div>
+            <div class="input-group">
+                <label for="yol-ucreti">Yol ücreti (brüt):</label>
+                <input type="number" id="yol-ucreti" value="0">
+            </div>
+            <div class="input-group">
+                <label for="bes-kesintisi">BES Kesintisi (Net):</label>
+                <input type="number" id="bes-kesintisi" value="2520.75">
+            </div>
+            <div class="input-group">
+                <label for="vakif-kesintisi-yuzde">Vakıf Kesintisi (%):</label>
+                <input type="number" id="vakif-kesintisi-yuzde" value="10">
+            </div>
+        </div>
 
+        <div class="output-grid">
+            <div class="output-group">
+                <div class="output-label">Sendika Ücreti:</div>
+                <div class="output-value" id="sendika-ucreti">0.00</div>
+            </div>
+            <div class="output-group">
+                <div class="output-label">Vergi İstisnası:</div>
+                <div class="output-value" id="vergi-istisnasi">0.00</div>
+            </div>
+            <div class="output-group">
+                <div class="output-label">Toplam Brüt:</div>
+                <div class="output-value" id="toplam-brut">0.00</div>
+            </div>
+            <div class="output-group">
+                <div class="output-label">BES Kesintisi (Brüt):</div>
+                <div class="output-value" id="bes-kesintisi-brut-sonuc">0.00</div>
+            </div>
+            <div class="output-group">
+                <div class="output-label">Vakıf Kesintisi:</div>
+                <div class="output-value" id="vakif-kesintisi-sonuc">0.00</div>
+            </div>
+            <div class="output-group">
+                <div class="output-label">Net İkramiye Tutarı:</div>
+                <div class="output-value" id="net-ikramiye">0.00</div>
+            </div>
+        </div>
 
-        <h3>Sonuçlar</h3>
-        <div class="result-group">
-            <div class="result-row">
-                <span class="result-label">Toplam Brüt:</span>
-                <span class="result-value" id="toplam-brut">0.00</span>
-            </div>
-            <div class="result-row">
-                <span class="result-label">Net İkramiye:</span>
-                <span class="result-value" id="net-ikramiye">0.00</span>
-            </div>
-            <div class="result-row">
-                <span class="result-label">Net Maaş:</span>
-                <span class="result-value" id="net-maas">0.00</span>
-            </div>
+        <div class="net-maas-box">
+            <div class="net-maas-label">Net Maaş:</div>
+            <div class="net-maas-value" id="net-maas">0.00</div>
+        </div>
+
+        <div class="bottom-buttons">
+            <button onclick="location.href='#'">Görüş, öneri ve teşekkür</button>
+            <button onclick="location.href='#'">Sosyal yardımlar</button>
         </div>
     </div>
     <script src="script.js"></script>
