--- a/index.html
+++ b/index.html
@@ -63,47 +63,43 @@
         <div class="input-grid">
             <div class="input-group">
                 <label for="saat-ucreti">Çalışma saat ücreti:</label>
-                <input type="number" id="saat-ucreti" value="318.13">
+                <input type="number" id="saat-ucreti">
             </div>
             <div class="input-group">
                 <label for="calisma-gun-saati">Çalışma gün saati:</label>
-                <input type="number" id="calisma-gun-saati" value="232.5">
+                <input type="number" id="calisma-gun-saati">
             </div>
             <div class="input-group">
                 <label for="fazla-mesai-saati">Fazla mesai saati:</label>
-                <input type="number" id="fazla-mesai-saati" value="4">
+                <input type="number" id="fazla-mesai-saati">
             </div>
             <div class="input-group">
                 <label for="gece-zammi">Gece zammı:</label>
-                <input type="number" id="gece-zammi" value="78">
+                <input type="number" id="gece-zammi">
             </div>
             <div class="input-group">
                 <label for="ulusal-bayram">Ulusal bayram çalışması:</label>
-                <input type="number" id="ulusal-bayram" value="7.5">
+                <input type="number" id="ulusal-bayram">
             </div>
             <div class="input-group">
                 <label for="dini-bayram">Dini bayram çalışması:</label>
-                <input type="number" id="dini-bayram" value="0">
+                <input type="number" id="dini-bayram">
             </div>
             <div class="input-group">
                 <label for="resmi-tatil">Resmi tatil fazla mesai:</label>
-                <input type="number" id="resmi-tatil" value="0">
-            </div>
-            <div class="input-group">
-                <label for="ikramiye-brut">İkramiye (Brüt):</label>
-                <input type="number" id="ikramiye-brut" value="0">
+                <input type="number" id="resmi-tatil">
             </div>
             <div class="input-group">
                 <label for="yol-ucreti">Yol ücreti (brüt):</label>
-                <input type="number" id="yol-ucreti" value="0">
+                <input type="number" id="yol-ucreti">
             </div>
             <div class="input-group">
                 <label for="bes-kesintisi">BES Kesintisi (Net):</label>
-                <input type="number" id="bes-kesintisi" value="2520.75">
+                <input type="number" id="bes-kesintisi">
             </div>
             <div class="input-group">
                 <label for="vakif-kesintisi-yuzde">Vakıf Kesintisi (%):</label>
-                <input type="number" id="vakif-kesintisi-yuzde" value="10">
+                <input type="number" id="vakif-kesintisi-yuzde">
             </div>
         </div>
 
@@ -140,8 +136,8 @@
         </div>
 
         <div class="bottom-buttons">
-            <button onclick="location.href='#'">Görüş, öneri ve teşekkür</button>
-            <button onclick="location.href='#'">Sosyal yardımlar</button>
+            <button onclick="location.href='https://bordro.pages.dev/tes.html'">Görüş, öneri ve teşekkür</button>
+            <button onclick="location.href='https://bordro.pages.dev/sosyal.html'">Sosyal yardımlar</button>
         </div>
     </div>
     <script src="script.js"></script>
