--- a/index.html
+++ b/index.html
@@ -3,33 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maaş Hesaplama 2026</title>
+    <title>2026 Maaş Hesaplama</title>
     <style>
-        body { font-family: Arial, sans-serif; display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: #f0f2f5; margin: 0; padding: 20px; box-sizing: border-box; }
-        .container { background-color: #ffffff; padding: 25px 35px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); width: 100%; max-width: 600px; }
-        h2 { text-align: center; color: #333; margin-bottom: 25px; }
-        .top-options { display: flex; justify-content: space-between; margin-bottom: 20px; }
-        .top-options select { width: 48%; padding: 10px; border: 1px solid #ddd; border-radius: 8px; font-size: 16px; }
-        .input-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 20px; }
+        body { font-family: 'Segoe UI', Arial, sans-serif; display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: #f4f7f6; margin: 0; padding: 20px; box-sizing: border-box; }
+        .container { background-color: #ffffff; padding: 25px 35px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); width: 100%; max-width: 650px; }
+        h2 { text-align: center; color: #2c3e50; margin-bottom: 25px; border-bottom: 2px solid #6a1b9a; padding-bottom: 10px; }
+        .top-options { display: flex; justify-content: space-between; margin-bottom: 20px; gap: 10px; }
+        .top-options select { width: 48%; padding: 12px; border: 1px solid #ddd; border-radius: 8px; font-size: 16px; background-color: #fff; cursor: pointer; }
+        .input-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-bottom: 20px; }
         .input-group { display: flex; flex-direction: column; }
-        .input-group label { margin-bottom: 8px; font-weight: 600; color: #555; font-size: 14px; }
-        .input-group input { padding: 10px; border: 1px solid #ccc; border-radius: 8px; font-size: 16px; background-color: #f9f9f9; }
-        .output-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-top: 20px; border-top: 2px solid #eee; padding-top: 20px; }
-        .output-group { text-align: center; }
-        .output-label { font-size: 14px; color: #777; margin-bottom: 5px; }
-        .output-value { font-size: 18px; font-weight: bold; color: #333; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-        .net-maas-box { background-color: #6a1b9a; color: #fff; padding: 20px; border-radius: 12px; text-align: center; margin-top: 25px; }
-        .net-maas-label { font-size: 18px; font-weight: 600; margin-bottom: 5px; }
-        .net-maas-value { font-size: 30px; font-weight: bold; }
-        .bottom-buttons { display: flex; justify-content: space-around; margin-top: 20px; }
-        .bottom-buttons button { padding: 12px 20px; border: none; border-radius: 8px; cursor: pointer; font-size: 14px; font-weight: 600; background-color: #e0e0e0; color: #555; transition: background-color 0.3s; }
-        .bottom-buttons button:hover { background-color: #d0d0d0; }
-        @media (max-width: 480px) {
-            .input-grid, .output-grid { grid-template-columns: 1fr; }
-            .top-options { flex-direction: column; gap: 10px; }
-            .top-options select { width: 100%; }
-            .bottom-buttons { flex-direction: column; gap: 10px; }
-        }
+        .input-group label { margin-bottom: 6px; font-weight: 600; color: #444; font-size: 13px; }
+        .input-group input { padding: 10px; border: 1px solid #ccc; border-radius: 6px; font-size: 15px; background-color: #fafafa; transition: border 0.3s; }
+        .input-group input:focus { border-color: #6a1b9a; outline: none; }
+        .output-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-top: 20px; border-top: 2px solid #eee; padding-top: 20px; }
+        .output-group { background: #f9f9f9; padding: 10px; border-radius: 8px; text-align: center; border: 1px solid #eee; }
+        .output-label { font-size: 12px; color: #888; margin-bottom: 4px; text-transform: uppercase; letter-spacing: 0.5px; }
+        .output-value { font-size: 16px; font-weight: bold; color: #2c3e50; }
+        .net-maas-box { background: linear-gradient(135deg, #6a1b9a 0%, #8e24aa 100%); color: #fff; padding: 20px; border-radius: 12px; text-align: center; margin-top: 25px; box-shadow: 0 4px 15px rgba(106, 27, 154, 0.3); }
+        .net-maas-label { font-size: 18px; font-weight: 600; margin-bottom: 5px; opacity: 0.9; }
+        .net-maas-value { font-size: 34px; font-weight: 800; }
+        .bottom-buttons { display: flex; justify-content: space-between; margin-top: 25px; gap: 10px; }
+        .bottom-buttons button { flex: 1; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-size: 13px; font-weight: 600; background-color: #ecf0f1; color: #34495e; transition: all 0.3s; }
+        .bottom-buttons button:hover { background-color: #bdc3c7; transform: translateY(-2px); }
+        @media (max-width: 500px) { .input-grid, .output-grid { grid-template-columns: 1fr; } .top-options { flex-direction: column; } .top-options select { width: 100%; } }
     </style>
 </head>
 <body>
@@ -38,18 +34,10 @@
 
         <div class="top-options">
             <select id="month">
-                <option value="1">Ocak</option>
-                <option value="2">Şubat</option>
-                <option value="3">Mart</option>
-                <option value="4">Nisan</option>
-                <option value="5">Mayıs</option>
-                <option value="6">Haziran</option>
-                <option value="7">Temmuz</option>
-                <option value="8">Ağustos</option>
-                <option value="9">Eylül</option>
-                <option value="10">Ekim</option>
-                <option value="11">Kasım</option>
-                <option value="12">Aralık</option>
+                <option value="1">Ocak</option><option value="2">Şubat</option><option value="3">Mart</option>
+                <option value="4">Nisan</option><option value="5">Mayıs</option><option value="6">Haziran</option>
+                <option value="7">Temmuz</option><option value="8">Ağustos</option><option value="9">Eylül</option>
+                <option value="10">Ekim</option><option value="11">Kasım</option><option value="12">Aralık</option>
             </select>
             <select id="tax-rate">
                 <option value="0.15">Vergi Dilimi: 15%</option>
@@ -61,87 +49,37 @@
         </div>
         
         <div class="input-grid">
-            <div class="input-group">
-                <label for="saat-ucreti">Çalışma saat ücreti:</label>
-                <input type="number" id="saat-ucreti">
-            </div>
-            <div class="input-group">
-                <label for="calisma-gun-saati">Çalışma gün saati:</label>
-                <input type="number" id="calisma-gun-saati">
-            </div>
-            <div class="input-group">
-                <label for="fazla-mesai-saati">Fazla mesai saati:</label>
-                <input type="number" id="fazla-mesai-saati">
-            </div>
-            <div class="input-group">
-                <label for="gece-zammi">Gece zammı:</label>
-                <input type="number" id="gece-zammi">
-            </div>
-            <div class="input-group">
-                <label for="ulusal-bayram">Ulusal bayram çalışması:</label>
-                <input type="number" id="ulusal-bayram">
-            </div>
-            <div class="input-group">
-                <label for="dini-bayram">Dini bayram çalışması:</label>
-                <input type="number" id="dini-bayram">
-            </div>
-            <div class="input-group">
-                <label for="resmi-tatil">Resmi tatil fazla mesai:</label>
-                <input type="number" id="resmi-tatil">
-            </div>
-            <div class="input-group">
-                <label for="yol-ucreti">Yol ücreti (brüt):</label>
-                <input type="number" id="yol-ucreti">
-            </div>
-            <div class="input-group">
-                <label for="bes-kesintisi">BES Kesintisi (Net):</label>
-                <input type="number" id="bes-kesintisi">
-            </div>
-            <div class="input-group">
-                <label for="vakif-kesintisi-yuzde">Vakıf Kesintisi (%):</label>
-                <input type="number" id="vakif-kesintisi-yuzde">
-            </div>
+            <div class="input-group"><label>Çalışma saat ücreti:</label><input type="number" id="saat-ucreti" placeholder="0.00"></div>
+            <div class="input-group"><label>Çalışma gün saati:</label><input type="number" id="calisma-gun-saati" placeholder="0.00"></div>
+            <div class="input-group"><label>Fazla mesai saati:</label><input type="number" id="fazla-mesai-saati" placeholder="0"></div>
+            <div class="input-group"><label>Gece zammı saati:</label><input type="number" id="gece-zammi" placeholder="0"></div>
+            <div class="input-group"><label>Ulusal bayram (saat):</label><input type="number" id="ulusal-bayram" placeholder="0"></div>
+            <div class="input-group"><label>Dini bayram (saat):</label><input type="number" id="dini-bayram" placeholder="0"></div>
+            <div class="input-group"><label>Resmi tatil FM (saat):</label><input type="number" id="resmi-tatil" placeholder="0"></div>
+            <div class="input-group"><label>Yol ücreti (brüt):</label><input type="number" id="yol-ucreti" placeholder="0.00"></div>
+            <div class="input-group"><label>Net BES Kesintisi:</label><input type="number" id="bes-kesintisi" placeholder="0.00"></div>
+            <div class="input-group"><label>Vakıf Kesintisi (%):</label><input type="number" id="vakif-kesintisi-yuzde" placeholder="10"></div>
         </div>
 
         <div class="output-grid">
-            <div class="output-group">
-                <div class="output-label">Sendika Ücreti:</div>
-                <div class="output-value" id="sendika-ucreti">0.00</div>
-            </div>
-            <div class="output-group">
-                <div class="output-label">Vergi İstisnası:</div>
-                <div class="output-value" id="vergi-istisnasi">0.00</div>
-            </div>
-            <div class="output-group">
-                <div class="output-label">Toplam Brüt:</div>
-                <div class="output-value" id="toplam-brut">0.00</div>
-            </div>
-            <div class="output-group">
-                <div class="output-label">BES Kesintisi (Brüt):</div>
-                <div class="output-value" id="bes-kesintisi-brut-sonuc">0.00</div>
-            </div>
-            <div class="output-group">
-                <div class="output-label">Vakıf Kesintisi:</div>
-                <div class="output-value" id="vakif-kesintisi-sonuc">0.00</div>
-            </div>
-            <div class="output-group">
-                <div class="output-label">Net İkramiye Tutarı:</div>
-                <div class="output-value" id="net-ikramiye">0.00</div>
-            </div>
+            <div class="output-group"><div class="output-label">Sendika Ücreti</div><div class="output-value" id="sendika-ucreti">0.00</div></div>
+            <div class="output-group"><div class="output-label">Vergi İstisnası</div><div class="output-value" id="vergi-istisnasi">0.00</div></div>
+            <div class="output-group"><div class="output-label">Toplam Brüt</div><div class="output-value" id="toplam-brut">0.00</div></div>
+            <div class="output-group"><div class="output-label">BES (Brüt)</div><div class="output-value" id="bes-kesintisi-brut-sonuc">0.00</div></div>
+            <div class="output-group"><div class="output-label">Vakıf Kesintisi</div><div class="output-value" id="vakif-kesintisi-sonuc">0.00</div></div>
+            <div class="output-group"><div class="output-label">Net İkramiye</div><div class="output-value" id="net-ikramiye">0.00</div></div>
         </div>
 
         <div class="net-maas-box">
-            <div class="net-maas-label">Net Maaş:</div>
+            <div class="net-maas-label">Ödenecek Net Maaş</div>
             <div class="net-maas-value" id="net-maas">0.00</div>
         </div>
 
         <div class="bottom-buttons">
-            <button onclick="location.href='https://bordro.pages.dev/tes.html'">Görüş, öneri ve teşekkür</button>
-            <button onclick="location.href='https://bordro.pages.dev/sosyal.html'">Sosyal yardımlar</button>
+            <button onclick="window.open('https://bordro.pages.dev/tes.html', '_blank')">Görüş, öneri ve teşekkür</button>
+            <button onclick="window.open('https://bordro.pages.dev/sosyal.html', '_blank')">Sosyal yardımlar</button>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
-
-
